@@ -5,6 +5,7 @@
 * Adding #313 basic vsync support for hardware encoders (thanks to Wontell)
 * Adding "Auto" profile for VCEncC
 * Changing #292 back to PySide2 to be compatible with Windows 7 and 8 (thanks to Causemic)
+* Fixing #315 HDR10 info not parsed from subsequent video tracks than the first (thanks to msaintauret)
 * Fixing profile not being passed for AVC with VCEencC and stuck on Baseline
 * Fixing that force 10-bit encoding for NVEencC was not set from profiles properly (thanks to wynterca)
 
